src/tests/snapshots/lovely__tests__compiler_tests@block_expressions.lv-3.snap
---
source: src/tests/mod.rs
expression: checked_program
input_file: src/tests/source_files/block_expressions.lv
---
CheckedProgram {
    exprs: [
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "x",
                value: CheckedExpression {
                    type_id: 0,
                    data: Block(
                        [
                            CheckedExpression {
                                type_id: 2,
                                data: Unit,
                            },
                            CheckedExpression {
                                type_id: 1,
                                data: BoolLiteral(
                                    true,
                                ),
                            },
                            CheckedExpression {
                                type_id: 0,
                                data: Infix {
                                    left: CheckedExpression {
                                        type_id: 0,
                                        data: IntLiteral(
                                            7,
                                        ),
                                    },
                                    operator: Minus,
                                    right: CheckedExpression {
                                        type_id: 0,
                                        data: IntLiteral(
                                            4,
                                        ),
                                    },
                                },
                            },
                        ],
                    ),
                },
                mutable: false,
                variable_id: 0,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "y",
                value: CheckedExpression {
                    type_id: 0,
                    data: Ident {
                        name: "x",
                        variable_id: 0,
                    },
                },
                mutable: false,
                variable_id: 1,
            },
        },
    ],
}
