src/tests/snapshots/lovely__tests__compiler_tests@block_expressions.lv.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/source_files/block_expressions.lv
---
[
    Token {
        kind: Identifier,
        span: Span {
            start: 0,
            end: 1,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 2,
            end: 3,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 3,
            end: 4,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 5,
            end: 6,
        },
    },
    Token {
        kind: Unit,
        span: Span {
            start: 9,
            end: 13,
        },
    },
    Token {
        kind: True,
        span: Span {
            start: 16,
            end: 20,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 23,
            end: 24,
        },
    },
    Token {
        kind: Minus,
        span: Span {
            start: 25,
            end: 26,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 27,
            end: 28,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 29,
            end: 30,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 32,
            end: 33,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 34,
            end: 35,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 36,
            end: 39,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 40,
            end: 41,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 42,
            end: 43,
        },
    },
]
