src/tests/snapshots/lovely__tests__compiler_tests@functions.lv-2.snap
---
source: src/tests/mod.rs
expression: ast
input_file: src/tests/source_files/functions.lv
---
Program(
    [
        Expression {
            span: Span {
                start: 0,
                end: 45,
            },
            kind: VariableDecl {
                name: "add",
                value: Expression {
                    span: Span {
                        start: 7,
                        end: 45,
                    },
                    kind: Function {
                        parameters: [
                            FunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: false,
                                internal_name: "x",
                                external_name: None,
                                ty: Ident(
                                    "Int",
                                ),
                            },
                            FunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: true,
                                internal_name: "y",
                                external_name: Some(
                                    "to",
                                ),
                                ty: Ident(
                                    "Int",
                                ),
                            },
                        ],
                        return_type: Some(
                            Ident(
                                "Int",
                            ),
                        ),
                        body: Expression {
                            span: Span {
                                start: 40,
                                end: 45,
                            },
                            kind: Infix {
                                left: Expression {
                                    span: Span {
                                        start: 40,
                                        end: 41,
                                    },
                                    kind: Ident(
                                        "x",
                                    ),
                                },
                                operator: Plus,
                                right: Expression {
                                    span: Span {
                                        start: 44,
                                        end: 45,
                                    },
                                    kind: Ident(
                                        "y",
                                    ),
                                },
                            },
                        },
                    },
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 47,
                end: 65,
            },
            kind: VariableDecl {
                name: "x",
                value: Expression {
                    span: Span {
                        start: 52,
                        end: 65,
                    },
                    kind: FunctionCall {
                        name: "add",
                        arguments: [
                            FunctionArgument {
                                label: None,
                                value: Expression {
                                    span: Span {
                                        start: 56,
                                        end: 57,
                                    },
                                    kind: IntLiteral(
                                        4,
                                    ),
                                },
                            },
                            FunctionArgument {
                                label: Some(
                                    "to",
                                ),
                                value: Expression {
                                    span: Span {
                                        start: 63,
                                        end: 64,
                                    },
                                    kind: IntLiteral(
                                        9,
                                    ),
                                },
                            },
                        ],
                    },
                },
                mutable: false,
                ty: None,
            },
        },
        Expression {
            span: Span {
                start: 67,
                end: 68,
            },
            kind: Ident(
                "x",
            ),
        },
    ],
)
