src/tests/snapshots/lovely__tests__compiler_tests@functions.lv-3.snap
---
source: src/tests/mod.rs
expression: checked_program
input_file: src/tests/source_files/functions.lv
---
CheckedProgram {
    exprs: [
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "add",
                value: CheckedExpression {
                    type_id: 3,
                    data: Function {
                        parameters: [
                            CheckedFunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: false,
                                internal_name: "x",
                                external_name: None,
                                type_id: 0,
                            },
                            CheckedFunctionParameter {
                                modifier: Read,
                                labeled_at_callsite: true,
                                internal_name: "y",
                                external_name: Some(
                                    "to",
                                ),
                                type_id: 0,
                            },
                        ],
                        return_type: 0,
                        body: CheckedExpression {
                            type_id: 0,
                            data: Infix {
                                left: CheckedExpression {
                                    type_id: 0,
                                    data: Ident {
                                        name: "x",
                                        variable_id: 0,
                                    },
                                },
                                operator: Plus,
                                right: CheckedExpression {
                                    type_id: 0,
                                    data: Ident {
                                        name: "y",
                                        variable_id: 1,
                                    },
                                },
                            },
                        },
                    },
                },
                mutable: false,
                variable_id: 2,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "x",
                value: CheckedExpression {
                    type_id: 0,
                    data: FunctionCall {
                        name: "add",
                        arguments: [
                            CheckedFunctionArgument {
                                label: None,
                                value: CheckedExpression {
                                    type_id: 0,
                                    data: IntLiteral(
                                        4,
                                    ),
                                },
                            },
                            CheckedFunctionArgument {
                                label: Some(
                                    "to",
                                ),
                                value: CheckedExpression {
                                    type_id: 0,
                                    data: IntLiteral(
                                        9,
                                    ),
                                },
                            },
                        ],
                    },
                },
                mutable: false,
                variable_id: 3,
            },
        },
        CheckedExpression {
            type_id: 0,
            data: Ident {
                name: "x",
                variable_id: 3,
            },
        },
    ],
}
