src/tests/snapshots/lovely__tests__compiler_tests@idents.lv.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/source_files/idents.lv
---
[
    Token {
        kind: Identifier,
        span: Span {
            start: 0,
            end: 1,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 2,
            end: 3,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 3,
            end: 4,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 5,
            end: 7,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 8,
            end: 9,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 10,
            end: 11,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 11,
            end: 12,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 13,
            end: 14,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 16,
            end: 17,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 18,
            end: 19,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 19,
            end: 20,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 21,
            end: 22,
        },
    },
    Token {
        kind: Plus,
        span: Span {
            start: 23,
            end: 24,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 25,
            end: 26,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 28,
            end: 29,
        },
    },
]
